--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "nodemon index.js",
+    "start": "node index.js",
     "inngest": "npx inngest-cli@latest dev"
   },
   "keywords": [],
@@ -20,6 +21,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
+    "gitignore": "^0.7.0",
     "inngest": "^3.39.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.15.1",
