--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "start": "node index.js",
     "inngest": "npx inngest-cli@latest dev"
   },
+  "engines": {
+    "node": ">=18.0.0"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
